[package]
name = "robs"
version = "0.2.2"
authors = ["Nils Feierabend <mztikk@outlook.de>"]
edition = "2021"
repository = "https://github.com/mztikk/robs"
license = "MIT"
description = "aob scanning"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
stringr = { version = "0.1.3" }
itertools = "0.11.0"
thiserror = "1.0.49"
rayon = "1.8.0"
